--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import "@fontsource/roboto";
+
+body {
+font-family: 'Roboto', sans-serif;
+font-weight: 500;
+background-color: rgb(184, 164, 164);
+}
